# substreams-bitcoin

./: .sfreleaser  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  buf.gen.yaml  gen.sh
core/: Cargo.toml
core/src/: block_view.rs  lib.rs
core/src/pb/: generated.rs  mod.rs  sf.bitcoin.type.v1.rs
substreams-bitcoin/: Cargo.toml
substreams-bitcoin/src/: lib.rs
