[package]
name = "substreams-bitcoin-core"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
prost = "^0.11.0"
prost-types = "^0.11.0"
substreams = "^0.5.0"

[build-dependencies]
prost-build = "^0.11.0"

[dev-dependencies]
anyhow = "1"