[package]
name = "substreams-bitcoin"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
num-bigint = "0.4.3"
substreams = "^0.5.0"
substreams-bitcoin-core = { workspace = true }

[dev-dependencies]
anyhow = "1"
